--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -43,7 +43,6 @@
 
           background: linear-gradient(currentColor 0 0) 0 100% / var(--d, 0) 3px
             no-repeat;
-          transition: 0.3s;
 
           &:hover {
             --d: 100%;
@@ -54,12 +53,16 @@
           li {
             font-weight: 520;
             font-size: 1.7rem;
-            transition: all 0.3s ease-in-out;
+
             &:hover {
               color: var(--newOrange);
             }
           }
         }
+      }
+
+      .hamburger a {
+        display: none;
       }
     }
   }
@@ -75,6 +78,88 @@
       }
       .logo {
         margin-left: 4rem;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  #nav-bar {
+    .nav {
+      z-index: 1;
+      .menu {
+        ul {
+          margin-right: 2rem;
+        }
+        .topnav {
+          position: absolute;
+          top: 69px;
+          left: 0;
+          right: 0;
+          width: 100%;
+          background: white;
+          transform: translate(0, -10px);
+          opacity: 0;
+          padding-bottom: 2rem;
+          z-index: -10;
+          transition: 0.4s ease-in-out;
+
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+          a {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding: 5px 4rem;
+            text-align: center;
+            opacity: 0;
+
+            background: linear-gradient(currentColor 0 0) 0 100% / var(--d, 0)
+              3px no-repeat;
+            transition: 0.3s;
+
+            &:hover {
+              --d: 100%;
+
+              color: var(--newOrange);
+              transition: all 0.3s ease-in-out;
+            }
+            li {
+              font-weight: 520;
+              font-size: 1.7rem;
+              transition: all 0.3s ease-in-out;
+              &:hover {
+                color: var(--newOrange);
+              }
+            }
+          }
+        }
+        .topnav.active {
+          transform: translate(0, 0);
+          height: auto;
+          display: flex;
+          opacity: 1;
+
+          @for $i from 0 through 20 {
+            a:nth-child(#{$i + 1}) {
+              transition-delay: 0.3s * $i;
+              opacity: 1;
+            }
+          }
+        }
+
+        .hamburger a {
+          display: flex;
+          color: black;
+          align-items: center;
+          font-size: 2rem;
+        }
+      }
+      .logo {
+        margin-left: 2rem;
       }
     }
   }
