--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ code {
   padding: 0 2rem;
   text-align: center;
   background: linear-gradient(currentColor 0 0) 0 100%/var(--d, 0) 3px no-repeat;
-  transition: 0.3s;
 }
 #nav-bar .nav .menu ul a:hover {
   --d: 100%;
@@ -119,10 +118,12 @@ code {
 #nav-bar .nav .menu ul a li {
   font-weight: 520;
   font-size: 1.7rem;
-  transition: all 0.3s ease-in-out;
 }
 #nav-bar .nav .menu ul a li:hover {
   color: var(--newOrange);
+}
+#nav-bar .nav .menu .hamburger a {
+  display: none;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -131,6 +132,154 @@ code {
   }
   #nav-bar .nav .logo {
     margin-left: 4rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #nav-bar .nav {
+    z-index: 1;
+  }
+  #nav-bar .nav .menu ul {
+    margin-right: 2rem;
+  }
+  #nav-bar .nav .menu .topnav {
+    position: absolute;
+    top: 69px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: white;
+    transform: translate(0, -10px);
+    opacity: 0;
+    padding-bottom: 2rem;
+    z-index: -10;
+    transition: 0.4s ease-in-out;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  #nav-bar .nav .menu .topnav a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 5px 4rem;
+    text-align: center;
+    opacity: 0;
+    background: linear-gradient(currentColor 0 0) 0 100%/var(--d, 0) 3px no-repeat;
+    transition: 0.3s;
+  }
+  #nav-bar .nav .menu .topnav a:hover {
+    --d: 100%;
+    color: var(--newOrange);
+    transition: all 0.3s ease-in-out;
+  }
+  #nav-bar .nav .menu .topnav a li {
+    font-weight: 520;
+    font-size: 1.7rem;
+    transition: all 0.3s ease-in-out;
+  }
+  #nav-bar .nav .menu .topnav a li:hover {
+    color: var(--newOrange);
+  }
+  #nav-bar .nav .menu .topnav.active {
+    transform: translate(0, 0);
+    height: auto;
+    display: flex;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(1) {
+    transition-delay: 0s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(2) {
+    transition-delay: 0.3s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(3) {
+    transition-delay: 0.6s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(4) {
+    transition-delay: 0.9s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(5) {
+    transition-delay: 1.2s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(6) {
+    transition-delay: 1.5s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(7) {
+    transition-delay: 1.8s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(8) {
+    transition-delay: 2.1s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(9) {
+    transition-delay: 2.4s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(10) {
+    transition-delay: 2.7s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(11) {
+    transition-delay: 3s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(12) {
+    transition-delay: 3.3s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(13) {
+    transition-delay: 3.6s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(14) {
+    transition-delay: 3.9s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(15) {
+    transition-delay: 4.2s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(16) {
+    transition-delay: 4.5s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(17) {
+    transition-delay: 4.8s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(18) {
+    transition-delay: 5.1s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(19) {
+    transition-delay: 5.4s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(20) {
+    transition-delay: 5.7s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .topnav.active a:nth-child(21) {
+    transition-delay: 6s;
+    opacity: 1;
+  }
+  #nav-bar .nav .menu .hamburger a {
+    display: flex;
+    color: black;
+    align-items: center;
+    font-size: 2rem;
+  }
+  #nav-bar .nav .logo {
+    margin-left: 2rem;
   }
 }
 :root {
