--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -30,18 +30,64 @@
 
     .portfolio-box {
       width: 100%;
-
+      height: 100%;
       transition: transform 0.2s ease-in-out;
       // margin-bottom: 2.5rem;
+
       &:hover {
         transform: scale(1.08);
       }
 
       a {
+        display: flex;
+        height: 100%;
+        position: relative;
         img {
           width: 100%;
           height: auto;
           border-radius: 25px;
+          object-fit: cover;
+          object-position: center;
+          z-index: 1;
+        }
+
+        .top-layer {
+          width: 100%;
+          height: 100%;
+          background: rgb(94, 255, 245);
+          background: linear-gradient(
+            328deg,
+            rgba(94, 158, 255, 1) 0%,
+            rgba(119, 30, 135, 1) 100%,
+            rgba(60, 38, 184, 1) 100%,
+            rgba(0, 0, 0, 1) 100%
+          );
+          border-radius: 2.5rem;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 2;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: opacity 0.4s ease-in-out;
+          opacity: 0;
+          &:hover {
+            opacity: 0.9;
+            cursor: pointer;
+            span {
+              transform: translate3d(0, 0, 0);
+              opacity: 1;
+            }
+          }
+
+          span {
+            color: white;
+            max-width: 100%;
+            transform: translate3d(0, 100px, 0);
+            opacity: 0;
+            transition: all 0.3s ease-in-out 0.2s;
+          }
         }
       }
     }
