--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ code {
   --textGrey: #9c9aa7;
 }
 
-#nav-bar {
+.nav-bar {
   width: 100%;
   position: fixed;
   top: 0px;
@@ -76,32 +76,32 @@ code {
   right: 0px;
   z-index: 10;
   margin: 0 auto;
-  background-color: white;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0);
+  transition: all 0.3s ease-in-out;
 }
-#nav-bar .nav {
+.nav-bar .nav {
   display: flex;
   justify-content: space-between;
   max-width: 1170px;
   margin: 0 auto;
   padding: 15px 0px;
 }
-#nav-bar .nav .logo {
+.nav-bar .nav .logo {
   font-size: 2.4rem;
   font-weight: 600;
 }
-#nav-bar .nav .logo span {
+.nav-bar .nav .logo span {
   color: red;
 }
-#nav-bar .nav .menu {
+.nav-bar .nav .menu {
   display: flex;
 }
-#nav-bar .nav .menu ul {
+.nav-bar .nav .menu ul {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#nav-bar .nav .menu ul a {
+.nav-bar .nav .menu ul a {
   width: 100%;
   height: 100%;
   display: flex;
@@ -110,38 +110,44 @@ code {
   text-align: center;
   background: linear-gradient(currentColor 0 0) 0 100%/var(--d, 0) 3px no-repeat;
 }
-#nav-bar .nav .menu ul a:hover {
+.nav-bar .nav .menu ul a:hover {
   --d: 100%;
   color: var(--newOrange);
   transition: all 0.3s ease-in-out;
 }
-#nav-bar .nav .menu ul a li {
+.nav-bar .nav .menu ul a li {
   font-weight: 520;
   font-size: 1.7rem;
 }
-#nav-bar .nav .menu ul a li:hover {
+.nav-bar .nav .menu ul a li:hover {
   color: var(--newOrange);
 }
-#nav-bar .nav .menu .hamburger a {
+.nav-bar .nav .menu .hamburger a {
   display: none;
 }
 
+.nav-active {
+  background: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
 @media only screen and (max-width: 1024px) {
-  #nav-bar .nav .menu ul {
-    margin-right: 6rem;
+  .nav-bar .nav .menu ul {
+    margin-right: 2rem;
   }
-  #nav-bar .nav .logo {
+  .nav-bar .nav .logo {
     margin-left: 4rem;
   }
 }
 @media only screen and (max-width: 768px) {
-  #nav-bar .nav {
+  .nav-bar .nav {
     z-index: 1;
   }
-  #nav-bar .nav .menu ul {
+  .nav-bar .nav .menu ul {
     margin-right: 2rem;
   }
-  #nav-bar .nav .menu .topnav {
+  .nav-bar .nav .menu .topnav {
+    visibility: hidden;
     position: absolute;
     top: 69px;
     left: 0;
@@ -157,7 +163,7 @@ code {
     justify-content: center;
     flex-direction: column;
   }
-  #nav-bar .nav .menu .topnav a {
+  .nav-bar .nav .menu .topnav a {
     width: 100%;
     height: 100%;
     display: flex;
@@ -169,116 +175,117 @@ code {
     background: linear-gradient(currentColor 0 0) 0 100%/var(--d, 0) 3px no-repeat;
     transition: 0.3s;
   }
-  #nav-bar .nav .menu .topnav a:hover {
+  .nav-bar .nav .menu .topnav a:hover {
     --d: 100%;
     color: var(--newOrange);
     transition: all 0.3s ease-in-out;
   }
-  #nav-bar .nav .menu .topnav a li {
+  .nav-bar .nav .menu .topnav a li {
     font-weight: 520;
     font-size: 1.7rem;
     transition: all 0.3s ease-in-out;
   }
-  #nav-bar .nav .menu .topnav a li:hover {
+  .nav-bar .nav .menu .topnav a li:hover {
     color: var(--newOrange);
   }
-  #nav-bar .nav .menu .topnav.active {
+  .nav-bar .nav .menu .topnav.active {
+    visibility: visible;
+    display: flex;
     transform: translate(0, 0);
     height: auto;
-    display: flex;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(1) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(1) {
     transition-delay: 0s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(2) {
-    transition-delay: 0.3s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(2) {
+    transition-delay: 0.2s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(3) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(3) {
+    transition-delay: 0.4s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(4) {
     transition-delay: 0.6s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(4) {
-    transition-delay: 0.9s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(5) {
+    transition-delay: 0.8s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(5) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(6) {
+    transition-delay: 1s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(7) {
     transition-delay: 1.2s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(6) {
-    transition-delay: 1.5s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(8) {
+    transition-delay: 1.4s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(7) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(9) {
+    transition-delay: 1.6s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(10) {
     transition-delay: 1.8s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(8) {
-    transition-delay: 2.1s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(11) {
+    transition-delay: 2s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(9) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(12) {
+    transition-delay: 2.2s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(13) {
     transition-delay: 2.4s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(10) {
-    transition-delay: 2.7s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(14) {
+    transition-delay: 2.6s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(11) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(15) {
+    transition-delay: 2.8s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(16) {
     transition-delay: 3s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(12) {
-    transition-delay: 3.3s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(17) {
+    transition-delay: 3.2s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(13) {
+  .nav-bar .nav .menu .topnav.active a:nth-child(18) {
+    transition-delay: 3.4s;
+    opacity: 1;
+  }
+  .nav-bar .nav .menu .topnav.active a:nth-child(19) {
     transition-delay: 3.6s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(14) {
-    transition-delay: 3.9s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(20) {
+    transition-delay: 3.8s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(15) {
-    transition-delay: 4.2s;
+  .nav-bar .nav .menu .topnav.active a:nth-child(21) {
+    transition-delay: 4s;
     opacity: 1;
   }
-  #nav-bar .nav .menu .topnav.active a:nth-child(16) {
-    transition-delay: 4.5s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .topnav.active a:nth-child(17) {
-    transition-delay: 4.8s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .topnav.active a:nth-child(18) {
-    transition-delay: 5.1s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .topnav.active a:nth-child(19) {
-    transition-delay: 5.4s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .topnav.active a:nth-child(20) {
-    transition-delay: 5.7s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .topnav.active a:nth-child(21) {
-    transition-delay: 6s;
-    opacity: 1;
-  }
-  #nav-bar .nav .menu .hamburger a {
+  .nav-bar .nav .menu .hamburger a {
     display: flex;
     color: black;
     align-items: center;
     font-size: 2rem;
   }
-  #nav-bar .nav .logo {
+  .nav-bar .nav .logo {
     margin-left: 2rem;
   }
 }
@@ -651,15 +658,57 @@ code {
 }
 #portfolio .portfolio-group .portfolio-box {
   width: 100%;
+  height: 100%;
   transition: transform 0.2s ease-in-out;
 }
 #portfolio .portfolio-group .portfolio-box:hover {
   transform: scale(1.08);
 }
+#portfolio .portfolio-group .portfolio-box a {
+  display: flex;
+  height: 100%;
+  position: relative;
+}
 #portfolio .portfolio-group .portfolio-box a img {
   width: 100%;
   height: auto;
   border-radius: 25px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  z-index: 1;
+}
+#portfolio .portfolio-group .portfolio-box a .top-layer {
+  width: 100%;
+  height: 100%;
+  background: rgb(94, 255, 245);
+  background: linear-gradient(328deg, rgb(94, 158, 255) 0%, rgb(119, 30, 135) 100%, rgb(60, 38, 184) 100%, rgb(0, 0, 0) 100%);
+  border-radius: 2.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+}
+#portfolio .portfolio-group .portfolio-box a .top-layer:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+#portfolio .portfolio-group .portfolio-box a .top-layer:hover span {
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
+#portfolio .portfolio-group .portfolio-box a .top-layer span {
+  color: white;
+  max-width: 100%;
+  transform: translate3d(0, 100px, 0);
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0.2s;
 }
 
 @media only screen and (max-width: 1024px) {
