--- a/css/_home.scss
+++ b/css/_home.scss
@@ -1,7 +1,8 @@
 :root {
-  --newOrange: #f75023;
+  --newOrange: #aa8b56;
   --textGrey: #9c9aa7;
   --TextFrontend: #1cbe59;
+  --portfolioHover: #f4a41a;
 }
 #home {
   // position: relative;
@@ -10,7 +11,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   // flex-direction: row;
   .home__hello {
@@ -48,7 +49,7 @@
         transition: all 0.2s ease-in-out;
 
         &:hover {
-          background: orange;
+          background: var(--portfolioHover);
           transform: translate(0, -10px);
         }
         span {
@@ -89,9 +90,31 @@
 
 @media only screen and (max-width: 768px) {
   #home {
+    width: 100%;
+    flex-direction: column-reverse;
+    position: relative;
+    top: -4rem;
+
+    .home__image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        // position: absolute;
+        // left: 8rem;
+        // top: 10rem;
+        margin-bottom: 2rem;
+      }
+    }
     .home__hello {
-      margin-left: 8rem;
-      margin-top: 8rem;
+      width: 100%;
+      margin-top: 0rem;
+      margin-left: 0rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
       h3 {
         font-size: 2rem;
@@ -112,7 +135,7 @@
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 678px) {
   #home {
     width: 100%;
     flex-direction: column-reverse;
@@ -120,7 +143,52 @@
 
     .home__image {
       display: flex;
-      justify-content: flex-end;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        // position: absolute;
+        // left: 8rem;
+        // top: 10rem;
+        margin-bottom: 2rem;
+      }
+    }
+    .home__hello {
+      margin-top: 2rem;
+      width: 100%;
+
+      h3 {
+        text-align: center;
+      }
+      h1 {
+        text-align: center;
+      }
+      .greenText {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+
+      a {
+        display: grid;
+        place-items: center;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 426px) {
+  #home {
+    width: 100%;
+    flex-direction: column-reverse;
+    position: relative;
+    margin-left: 0;
+    top: 4rem;
+
+    .home__image {
+      display: flex;
+      justify-content: center;
       align-items: center;
       width: 85%;
       .image {
@@ -133,6 +201,7 @@
     .home__hello {
       margin-top: 2rem;
       width: 100%;
+      padding: 0 3rem;
 
       h3 {
         text-align: center;
