--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -1,5 +1,5 @@
 :root {
-  --newOrange: #f75023;
+  --newOrange: #aa8b56;
   --textGrey: #9c9aa7;
 }
 .nav-bar {
@@ -24,7 +24,7 @@
       font-size: 2.4rem;
       font-weight: 600;
       span {
-        color: red;
+        color: var(--newOrange);
       }
     }
     .menu {
@@ -51,8 +51,8 @@
             transition: all 0.3s ease-in-out;
           }
           li {
-            font-weight: 520;
-            font-size: 1.7rem;
+            font-weight: 400;
+            font-size: 1.9rem;
 
             &:hover {
               color: var(--newOrange);
@@ -73,8 +73,15 @@
   box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
 }
 
+@media only screen and (max-width: 1278px) {
+  .nav-bar {
+    padding: 0 3rem;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   .nav-bar {
+    padding: 0rem;
     .nav {
       .menu {
         ul {
@@ -82,7 +89,7 @@
         }
       }
       .logo {
-        margin-left: 4rem;
+        margin-left: 2rem;
       }
     }
   }
