--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -1,5 +1,5 @@
 :root {
-  --newOrange: #f75023;
+  --newOrange: #aa8b56;
   --textGrey: #9c9aa7;
 }
 #portfolio {
@@ -54,13 +54,11 @@
         .top-layer {
           width: 100%;
           height: 100%;
-          background: rgb(94, 255, 245);
+          background: rgb(223, 208, 71);
           background: linear-gradient(
-            328deg,
-            rgba(94, 158, 255, 1) 0%,
-            rgba(119, 30, 135, 1) 100%,
-            rgba(60, 38, 184, 1) 100%,
-            rgba(0, 0, 0, 1) 100%
+            307deg,
+            rgba(223, 208, 71, 1) 0%,
+            rgba(170, 139, 86, 1) 100%
           );
           border-radius: 2.5rem;
           position: absolute;
@@ -86,6 +84,7 @@
             max-width: 100%;
             transform: translate3d(0, 100px, 0);
             opacity: 0;
+            font-size: 3rem;
             transition: all 0.3s ease-in-out 0.2s;
           }
         }
@@ -106,7 +105,7 @@
 
 @media only screen and (max-width: 425px) {
   #portfolio {
-    padding-left: 5rem;
+    padding-left: 0;
     h1 {
       font-size: 3rem;
     }
@@ -114,6 +113,10 @@
     .portfolio-group {
       grid-template-columns: repeat(1, 1fr);
       padding: 0;
+
+      .portfolio-box {
+        padding: 0 3rem;
+      }
     }
   }
 }
