--- a/css/main.scss
+++ b/css/main.scss
@@ -11,3 +11,14 @@
   margin: 0 auto;
   height: 100%;
 }
+
+@media only screen and (max-width: 1278px) {
+  .container {
+    padding: 0 3.7rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .container {
+    padding: 0;
+  }
+}
