--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -1,5 +1,5 @@
 :root {
-  --newOrange: #aa8b56;
+  --mainColorText: #aa8b56;
   --textGrey: #9c9aa7;
 }
 .nav-bar {
@@ -24,7 +24,7 @@
       font-size: 2.4rem;
       font-weight: 600;
       span {
-        color: var(--newOrange);
+        color: var(--mainColorText);
       }
     }
     .menu {
@@ -47,7 +47,7 @@
           &:hover {
             --d: 100%;
 
-            color: var(--newOrange);
+            color: var(--mainColorText);
             transition: all 0.3s ease-in-out;
           }
           li {
@@ -55,7 +55,7 @@
             font-size: 1.9rem;
 
             &:hover {
-              color: var(--newOrange);
+              color: var(--mainColorText);
             }
           }
         }
@@ -137,7 +137,7 @@
             &:hover {
               --d: 100%;
 
-              color: var(--newOrange);
+              color: var(--mainColorText);
               transition: all 0.3s ease-in-out;
             }
             li {
@@ -145,7 +145,7 @@
               font-size: 1.7rem;
               transition: all 0.3s ease-in-out;
               &:hover {
-                color: var(--newOrange);
+                color: var(--mainColorText);
               }
             }
           }
