--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -1,5 +1,5 @@
 :root {
-  --newOrange: #aa8b56;
+  --mainColorText: #aa8b56;
   --textGrey: #9c9aa7;
 }
 #portfolio {
@@ -10,7 +10,7 @@
   h3 {
     text-align: center;
     font-size: 2.2rem;
-    color: var(--newOrange);
+    color: var(--mainColorText);
     margin-bottom: 1rem;
     font-weight: 900;
   }
@@ -68,6 +68,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+
           transition: opacity 0.4s ease-in-out;
           opacity: 0;
           &:hover {
