--- a/css/_home.scss
+++ b/css/_home.scss
@@ -135,7 +135,101 @@
   }
 }
 
+@media only screen and (max-width: 768px), screen and (max-height: 425px) {
+  #home {
+    width: 100%;
+    height: 100%;
+    flex-direction: column-reverse;
+    position: relative;
+    padding-top: 4.5rem;
+
+    .home__image {
+      width: 91%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        // position: absolute;
+        // left: 8rem;
+        // top: 10rem;
+        max-width: 47%;
+        margin-bottom: 2rem;
+      }
+    }
+    .home__hello {
+      width: 100%;
+      margin-top: 0rem;
+      margin-left: 0rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h3 {
+        font-size: 2rem;
+      }
+      h1 {
+        font-size: 3rem;
+      }
+      p {
+        font-size: 1.6rem;
+      }
+
+      a {
+        button {
+          padding: 2rem;
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 678px) {
+  #home {
+    width: 100%;
+    flex-direction: column-reverse;
+    position: relative;
+
+    .home__image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        // position: absolute;
+        // left: 8rem;
+        // top: 10rem;
+        margin-bottom: 2rem;
+      }
+    }
+    .home__hello {
+      margin-top: 2rem;
+      width: 100%;
+
+      h3 {
+        text-align: center;
+      }
+      h1 {
+        text-align: center;
+      }
+      .greenText {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+
+      a {
+        display: grid;
+        place-items: center;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 634px) {
   #home {
     width: 100%;
     flex-direction: column-reverse;
@@ -184,7 +278,7 @@
     flex-direction: column-reverse;
     position: relative;
     margin-left: 0;
-    top: 0rem;
+    top: 13rem;
 
     .home__image {
       display: flex;
@@ -223,13 +317,64 @@
     }
   }
 }
+@media only screen and (max-width: 426px), screen and (max-height: 425px) {
+  #home {
+    width: 100%;
+    height: 100%;
+    flex-direction: column-reverse;
+    position: relative;
+    top: 2.7rem;
+
+    .home__image {
+      width: 91%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        // position: absolute;
+        // left: 8rem;
+        // top: 10rem;
+        max-width: 47%;
+        margin-bottom: 2rem;
+      }
+    }
+    .home__hello {
+      width: 100%;
+      margin-top: 0rem;
+      margin-left: 0rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h3 {
+        font-size: 2rem;
+      }
+      h1 {
+        font-size: 3rem;
+      }
+      p {
+        font-size: 1.6rem;
+      }
+
+      a {
+        button {
+          padding: 2rem;
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 375px) {
   #home {
     width: 100%;
     flex-direction: column-reverse;
     position: relative;
     margin-left: 0;
-    top: 4rem;
+    top: 1rem;
 
     .home__image {
       width: 85%;
