--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -24,6 +24,8 @@ html {
     width: 10px;
   }
 
+  height: -webkit-fill-available;
+
   /* Track */
   ::-webkit-scrollbar-track {
     background: #f1f1f1;
