--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -50,17 +52,17 @@ html {
   }
 }
 
-@font-face {
-  font-family: "Jost", sans-serif;
-  src: url(./assets/fonts/Jost-VariableFont_wght.ttf);
-}
+// @font-face {
+//   font-family: "Jost", sans-serif;
+//   src: url(./assets/fonts/Jost-VariableFont_wght.ttf);
+// }
 
 body {
-  font-family: "Jost", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   line-height: 1.6 !important;
   font-size: 1.6rem !important;
-  background-color: #f6f7f2;
+  background-color: #f6fcfb;
   background-repeat: no-repeat;
   background-size: cover;
 }
