--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -46,16 +47,12 @@ html ::-webkit-scrollbar-thumb:hover {
   }
 }
 
-@font-face {
-  font-family: "Jost", sans-serif;
-  src: url(./assets/fonts/Jost-VariableFont_wght.ttf);
-}
 body {
-  font-family: "Jost", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   line-height: 1.6 !important;
   font-size: 1.6rem !important;
-  background-color: #f6f7f2;
+  background-color: #f6fcfb;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -317,13 +314,13 @@ code {
 }
 #home .home__hello h3 {
   color: var(--mainColorText);
-  font-size: 3rem;
-  font-weight: 300;
+  font-size: 4rem;
+  font-weight: 400;
   margin-bottom: 1rem;
 }
 #home .home__hello h1 {
-  font-size: 4.5rem;
-  font-weight: 500;
+  font-size: 4.8rem;
+  font-weight: 700;
   margin-bottom: 1rem;
 }
 #home .home__hello .greenText {
@@ -653,7 +650,7 @@ code {
 #skills h1 {
   text-align: center;
   font-size: 4rem;
-  font-weight: 900;
+  font-weight: 700;
   margin-bottom: 6rem;
 }
 #skills .skill-group {
