--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -24,7 +24,6 @@
     gap: 5rem;
     .skill-box {
       width: 100%;
-      height: 15rem;
       background-color: white;
       display: flex;
       flex-direction: column;
@@ -33,8 +32,8 @@
       border-radius: 2rem;
       border: 1px solid grey;
       .skill-logo {
-        max-width: 7rem;
-        max-height: 7rem;
+        max-width: 7rem !important;
+        max-height: 7rem !important;
         img {
           width: 100%;
           height: auto;
