--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -18,30 +18,71 @@
     text-align: center;
     font-size: 5rem;
     font-weight: 400;
-    margin-bottom: 5rem;
+    margin-bottom: 12rem;
   }
 
   .portfolio-group {
     width: 100%;
     place-items: center;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 4rem;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 12rem;
 
     .portfolio-box {
       width: 100%;
       height: 100%;
-      transition: transform 0.2s ease-in-out;
+      display: flex;
+      .info-box {
+        padding: 1rem;
+        width: 50%;
+        .technologies {
+          margin-top: 1rem;
+        }
+        .demo-box {
+          width: 100%;
+          display: flex;
+          justify-content: space-evenly;
+          margin-top: 3rem;
+          margin-bottom: 3rem;
+          .demo-info-box {
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            .fa-solid {
+              margin-top: 1rem;
+              padding-left: 1rem;
+            }
+            h3 {
+              color: black;
+              &:hover {
+                color: red;
+                transition: all 0.3s ease-in-out;
+              }
+            }
+            &:hover {
+              color: red;
+              transition: all 0.3s ease-in-out;
+            }
+          }
+        }
+        .github-project {
+          width: 14%;
+          margin: 0 auto;
+          transition: all 0.3s ease-in-out;
+          height: 9rem;
+          &:hover {
+            transform: translate3d(0, -3%, 0);
+            transition: all 0.3s ease-in-out;
+          }
+        }
+      }
       // margin-bottom: 2.5rem;
 
-      &:hover {
-        transform: scale(1.08);
-      }
-
       a {
-        display: flex;
+        display: block;
         height: 100%;
         position: relative;
+        width: 50%;
         img {
           width: 100%;
           height: auto;
@@ -98,8 +139,35 @@
   #portfolio {
     .portfolio-group {
       gap: 2rem;
-      grid-template-columns: repeat(3, 1fr);
       padding: 0 5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #portfolio {
+    padding-left: 0;
+    h1 {
+      font-size: 3rem;
+    }
+
+    .portfolio-group {
+      grid-template-columns: repeat(1, 1fr);
+      padding: 0;
+      gap: 12rem;
+
+      .portfolio-box {
+        padding: 0 3rem;
+        flex-direction: column;
+        align-items: center;
+
+        .info-box {
+          .demo-box {
+            flex-direction: column;
+            align-items: center;
+          }
+        }
+      }
     }
   }
 }
