Add padding in skill box

--- a/css/main.css
+++ b/css/main.css
@@ -668,6 +668,7 @@ code {
   align-items: center;
   border-radius: 2rem;
   border: 1px solid grey;
+  padding: 2rem;
 }
 #skills .skill-group .skill-box .skill-logo {
   max-width: 7rem !important;
