--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -31,6 +31,7 @@
       align-items: center;
       border-radius: 2rem;
       border: 1px solid grey;
+      padding: 2rem;
       .skill-logo {
         max-width: 7rem !important;
         max-height: 7rem !important;
